tenants/triage-analysis-sast/mcp-github/base/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: mcp-github
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
  selector:
    app: mcp-github
