tenants/triage-analysis-sast/mcp-github/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mcp-github
spec:
  to:
    kind: Service
    name: mcp-github
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
